# mlready

./: .gitignore  LICENSE  README.md  pyproject.toml  run_demo.py
mlready/: __init__.py  applier.py  auditor.py  exceptions.py  patterns.py  profiler.py  recipe.py  report.py  sampling.py  utils.py
tests/: test_apply.py  test_auditor.py  test_profiler.py  test_report.py
