[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlready"
version = "0.1.0"
description = "ML readiness auditor for tabular data with safe normalization and reproducible cleaning recipes"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Vetrivel Maheswaran", email = "vetrim2003@gmail.com" }
]

keywords = [
    "machine-learning",
    "data-cleaning",
    "data-quality",
    "eda",
    "ml-pipeline",
    "data-preprocessing"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.21"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlready*"]
